Changelog
=========

2.7-dev0 - (unreleased)
---------------------------
* improve/fix extranet_reporters listing - allow any nubmer of bits
  between the top role dn and the country code [dumitval]
* fix role export where users have some incorrect data [dumitval]
* remove unused notify_on_membership_op method [dumitval]

2.6 - (2021-01-09)
---------------------------
* adapt logged_in_user for testing [dumitval]

2.5 - (2021-01-08)
---------------------------
* remove edit user permission for nfps [dumitval]
* move _is_authenticated, logged_in_user  to logic_common [dumitval]
* move _get_ldap_agent to ldap_config [dumitval]
* move nfp_for_country, orgs_in_country to ui_common [dumitval]
* _get_ldap_agent default bind=True [dumitval]
* removed unused code for auto-disabling users [dumitval]

2.4 - (2020-12-04)
---------------------------
* merge all nfp/nrc related functionality from the python2 branch
  [valipod refs #109366]
* remove all python2/zope2 specific functionality/support
  [valipod refs #109366]
* add organisation id in the table listing to allow filtering
  [dumitval refs #125322]
* Add organisation title to the XLS exported fields in role member
  export [dumitval refs #125322]
* remove possibility to autodisable users [dumitval]

2.3 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

2.2 - (2020-03-03)
---------------------------
* Change: Add jenkins badges
  [valentinab25]

2.1 - (2020-02-26)
---------------------------
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

2.0 - (2020-02-13)
---------------------------
* Change: Gitflow automatic release
  [valentinab25 refs #110159]
* compatibility changes for gitflow integration
  [dumitval]
* fix fetching of error messages
  [dumitval]
* remove duplicated user edit page in the organisation area
  [dumitval]
* fix permission checking (issue with bytes vs. str)
  [dumitval]
* fixes for the new branch of 'observing countries'
  [dumitval]