@@ -39,7 +39,6 @@ setup(name=NAME,
           'py3dns; python_version>"3.0"',
           'pydns; python_version<"3.0"',
           'transliterate',
-          'validate-email>=edw.1.3.1',
           'plone.app.testing',
           'plone.app.robotframework',
       ],
